# isd

./: .gitignore  404.html  README.md  build.sh  demo.tape  flake.nix  index.html  macros.py  mkdocs.yml  pyproject.toml  record_demo.sh  render_theme.py  sitemap.xml
.github/: FUNDING.yml  config.yml
.github/workflows/: nix.yml
assets/images/: isd.bak.cast
assets/javascripts/: bundle.79ae519e.min.js  bundle.f55a23d4.min.js
customization/: index.html
docs/: customization.md  faq.md  index.md  loggen.py  media.md  presentation.md  roadmap.md  security.md
docs/slides/: asciinema-player.css  asciinema-player.min.js  awesome-hello-world.py  awesome-hello-world.service  custom.tape  customization.html  example.md  fonts.css  index.html  init.sh  new_workflow.tape  old_workflow.tape  presentation.md  sysz_workflow.tape
docs/stylesheets/: asciinema-player.css  extra_fonts.css
docs_glossary/: abbreviations.md
faq/: index.html
media/: index.html
nix/appimage/: flake.nix
nix/systemd-units/: flake.nix
roadmap/: index.html
security/: index.html
slides/: custom.cast  new_workflow.cast  old_workflow.cast  sysz_workflow.cast  test.cast
src/isd/: dom.tcss  isd.py  keybinding_notes.md
src/isd_tui/: derive_terminal_theme.py  dom.tcss  isd.py
stylesheets/: custom-asciinema-player.css  extra_fonts.css
tests/: journalctl  test_visual.py
tests/artifacts/: 0-isd-example-unit-01.dependencies.txt  0-isd-example-unit-01.journal.txt  0-isd-example-unit-01.service.journal.txt  0-isd-example-unit-01.service.show.txt  0-isd-example-unit-01.service.status.txt  0-isd-example-unit-01.show.txt  0-isd-example-unit-01.status.txt  0-isd-example-unit-02.journal.txt  0-isd-example-unit-02.service.journal.txt  0-isd-example-unit-02.service.list-dependencies.txt  0-isd-example-unit-02.service.show.txt  0-isd-example-unit-02.service.status.txt  0-isd-example-unit-02.show.txt  0-isd-example-unit-02.status.txt  0-isd-example-unit-03.dependencies.txt  0-isd-example-unit-03.journal.txt  0-isd-example-unit-03.service.journal.txt  0-isd-example-unit-03.show.txt  0-isd-example-unit-04.dependencies.txt  0-isd-example-unit-04.journal.txt  0-isd-example-unit-04.service.journal.txt  0-isd-example-unit-04.service.show.txt  0-isd-example-unit-04.service.status.txt  0-isd-example-unit-04.show.txt  0-isd-example-unit-04.status.txt  fake_status_unit01.txt  fake_status_unit02.txt
