[project]
name = "isd"
version = "0.2.0"
description = "Interactive systemd TUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xdg-base-dirs>=6.0.0",
    "pfzy>=0.3.4",
    "textual>=0.89.1",
    "pydantic-settings[yaml]>=2.7.0",
    "pydantic>=2.10.4",
    "types-pyyaml>=6.0.12.20241221",
]

[dependency-groups]
dev = [
    "pylsp-mypy>=0.6.9",
    "pylsp-rope>=0.1.17",
    "python-lsp-isort>=0.2.0",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.0",
    "textual-dev>=1.7.0",
]
docs = [
  "mkdocs",
  "mkdocs-material[imaging]",
  "mkdocs-macros-plugin",
  "markdown-callouts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
isd = "isd.isd:main"
